build_log.txt
AS src/multiboot2.S
as --32 src/multiboot2.S -o build/obj/multiboot2.o
src/multiboot2.S: Assembler messages:
src/multiboot2.S: Warning: end of file not at end of a line; newline inserted
CC src/main.c
gcc -ffreestanding -fno-builtin -fno-stack-protector -nostdlib -Wall -Wextra -g -O0 -I./include -std=c99 -m32 -c src/main.c -o build/obj/main.o
CC src/SystemInit.c
gcc -ffreestanding -fno-builtin -fno-stack-protector -nostdlib -Wall -Wextra -g -O0 -I./include -std=c99 -m32 -c src/SystemInit.c -o build/obj/SystemInit.o
In file included from src/SystemInit.c:1:
./include/SystemTypes.h:2176:74: error: unknown type name ‘GDHandle’; did you mean ‘STHandle’?
 2176 | typedef void (*DeviceLoopDrawingProcPtr)(short depth, short deviceFlags, GDHandle targetDevice, long userData);
      |                                                                          ^~~~~~~~
      |                                                                          STHandle
src/SystemInit.c:90: warning: "EM_STANDARD_SIZE" redefined
   90 | #define EM_STANDARD_SIZE          (1024 * 4)  /* 4KB for ExpandMem */
      | 
In file included from src/SystemInit.c:18:
./include/ExpandMem.h:27: note: this is the location of the previous definition
   27 | #define EM_STANDARD_SIZE       0x2000      /* Standard size (8KB) */
      | 
src/SystemInit.c:91: warning: "EM_CURRENT_VERSION" redefined
   91 | #define EM_CURRENT_VERSION        1
      | 
./include/ExpandMem.h:25: note: this is the location of the previous definition
   25 | #define EM_CURRENT_VERSION      0x0200     /* Version 2.0 for System 7.1 */
      | 
src/SystemInit.c: In function ‘SystemInitToStage’:
src/SystemInit.c:196:13: warning: case value ‘6’ not in enumerated type ‘SystemInitStage’ [-Wswitch]
  196 |             case INIT_STAGE_PROCESS:
      |             ^~~~
src/SystemInit.c:205:13: warning: case value ‘7’ not in enumerated type ‘SystemInitStage’ [-Wswitch]
  205 |             case INIT_STAGE_COMPLETE:
      |             ^~~~
make: *** [Makefile:83: build/obj/SystemInit.o] Error 1
